--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +12,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lion_shool"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".gui.SelectedStudentActivity"
+            android:exported="false"
+            android:label="@string/title_activity_selected_student"
+            android:theme="@style/Theme.Lion_shool" />
         <activity
             android:name=".gui.SelectedCourse"
             android:exported="true"
@@ -22,20 +29,15 @@
             android:label="@string/title_activity_contact_us"
             android:theme="@style/Theme.Lion_shool" />
         <activity
-            android:name=".gui.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_selected_course"
-            android:theme="@style/Theme.Lion_shool" />
-        <activity
             android:name=".gui.SelectCourse"
             android:exported="false"
             android:label="@string/title_activity_select_course"
             android:theme="@style/Theme.Lion_shool" />
         <activity
-            android:name=".gui.SelectedStudentActivity"
+            android:name=".gui.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_selected_student"
-            android:theme="@style/Theme.Lion_shool">
+            android:label="@string/title_activity_selected_course"
+            android:theme="@style/Theme.Lion_shool" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,4 +47,3 @@
     </application>
 
 </manifest>
-
